# chimera

./: Dockerfile  Procfile  manage.py  pyproject.toml  requirements.txt
backend/: db.sqlite3
backend/backend/: urls.py
backend/backend/settings/: base.py  dev.py
backend/home/: models.py
backend/home/migrations/: 0003_homepage_body.py  0004_homepage_image.py
chimera/: db.sqlite3  wsgi.py
chimera/chimera/settings/: base.py
chimera/chimera/static/js/: chimera.js
chimera/chimera/templates/: base.html
chimera/home/: wagtail_hooks.py
chimera/home/migrations/: 0006_remove_homepage_note1_remove_homepage_note2_and_more.py
chimera/home/static/css/: style.css
chimera/home/templates/home/: base.html  home_page.html
chimera/static/js/: chimera.js
client/: package-lock.json  package.json
client/Components/: Header.js
client/Components/src/css/: style.css
client/pages/: index.js  style.css
client/pages/api/: revalidate.js
client/pages/test/: index.js
home/: models.py
home/migrations/: 0003_homepage_body.py  0004_homepage_note.py  0005_rename_note_homepage_note1_homepage_note2_and_more.py  0007_homepage_extra_info.py
home/static/css/: style.css
home/static/imgs/: deer.png~
home/templates/home/: home_page.html
settings/: base.py  dev.py  production.py
static/js/: chimera.js
